# findingalpha

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/universes/: core_etfs.txt  liquid_large_caps.txt  metadata.json  sp500_sample.txt
demo_data/: README.md
demo_data/backtests/: benchmark_comparison_20260514T000000Z.parquet  daily_setup_forward_returns_20260514T000000Z.parquet  forward_return_buckets_20260514T000000Z.parquet  setup_b_benchmark_relative_monthly_20260514T000000Z.parquet  setup_b_bucket_diagnostics_20260514T000000Z.parquet  setup_b_date_declustered_20260514T000000Z.parquet  setup_b_filter_diagnostics_20260514T000000Z.parquet  setup_b_indicator_diagnostics_20260514T000000Z.parquet  setup_b_interaction_slices_20260514T000000Z.parquet  setup_b_market_regime_20260514T000000Z.parquet  setup_b_market_regime_monthly_20260514T000000Z.parquet  (+10 more)
docs/: ALPHA_RESEARCH.md  API_COMPARISON.md  ARCHITECTURE_OPTIONS.md  BACKTESTING_NOTES.md  DATA_REQUIREMENTS.md  DECISIONS.md  DEMO_PLAN.md  DESIGN.md  PORTFOLIO_CASE_STUDY.md  PROJECT_PLAN.md  RESEARCH_LOG.md  RESEARCH_PLAN.md  RISK_AND_COMPLIANCE.md  SETUP_B_V1_RESEARCH_REPORT.md  SETUP_B_V2_PROPOSAL.md  SETUP_B_V2_TRANSITION_PLAN.md  SURVIVORSHIP_BIAS.md  UNIVERSES.md
scripts/: build_demo_dataset.py
tests/: __init__.py  test_alpaca_provider.py  test_daily_playbook.py  test_features.py  test_forward_returns.py  test_intraday.py  test_massive_provider.py  test_providers.py  test_scoring.py  test_screener.py  test_universe.py  test_update_sp500.py  test_validation.py
(+41 files in other folders)
