[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "findingalpha"
version = "0.1.0"
description = "Personal stock screener and alpha research dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12",
  "duckdb>=1.0",
  "pandas>=2.0",
  "plotly>=5.22",
  "pyarrow>=14.0",
  "python-dotenv>=1.0",
  "streamlit>=1.34",
  "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
findingalpha = "trading_screener.cli:main"
findingalpha-update-sp500 = "trading_screener.universe.update_sp500:main"

[tool.poetry]
packages = [{ include = "trading_screener", from = "src" }]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
